--- a/pom.xml
+++ b/pom.xml
@@ -160,5 +160,15 @@
 		<artifactId>spring-context</artifactId>
 		<version>3.2.5.RELEASE</version>
 	</dependency>
+	 <dependency>
+	  <groupId>com.google.zxing</groupId>
+	  <artifactId>core</artifactId>
+	  <version>3.0.0-SNAPSHOT</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.google.zxing</groupId>
+	  <artifactId>javase</artifactId>
+	  <version>3.0.0-SNAPSHOT</version>
+	 </dependency>
   </dependencies>
 </project>
