--- a/pom.xml
+++ b/pom.xml
@@ -170,5 +170,10 @@
 	  <artifactId>javase</artifactId>
 	  <version>3.0.1-SNAPSHOT</version>
 	 </dependency>
+ 	<dependency>
+	    <groupId>org.codehaus.jackson</groupId>
+	    <artifactId>jackson-mapper-asl</artifactId>
+	    <version>1.9.12</version>
+	</dependency>
   </dependencies>
 </project>
