--- a/myreceipt-business/pom.xml
+++ b/myreceipt-business/pom.xml
@@ -87,6 +87,16 @@
             <artifactId>javacpp</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
 
