--- a/myreceipt-war/pom.xml
+++ b/myreceipt-war/pom.xml
@@ -102,7 +102,17 @@
             <artifactId>log4j-core</artifactId>
             <version>2.5</version>
         </dependency>
-
+        <!--cloud vision api-->
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-vision</artifactId>
+            <version>v1-rev2-1.21.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.21.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -131,28 +141,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
             </plugin>
-            <!--For remote deployment-->
-            <!--<plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>7.7.Final</version>
-
-                <configuration>
-                    <hostname>192.168.10.116</hostname>
-                    <port>9999</port>
-                    <username>jboss</username>
-                    <password>Qwer1234.</password>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>-->
         </plugins>
     </build>
 
