--- a/myreceipt-business/pom.xml
+++ b/myreceipt-business/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>log4j-api</artifactId>
             <version>2.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.8.1</version>
+        </dependency>
     </dependencies>
 
 
