enhance ocr / bugs fixed

--- a/myreceipt-common/pom.xml
+++ b/myreceipt-common/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>spring-web</artifactId>
             <version>4.2.5.RELEASE</version>
         </dependency>
+        <!-- Bean Validator -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.4.Final</version>
+        </dependency>
     </dependencies>
 
 
