--- a/myreceipt-ear/pom.xml
+++ b/myreceipt-ear/pom.xml
@@ -40,7 +40,7 @@
                 </configuration>
             </plugin>
             <!--For remote deployment-->
-            <plugin>
+            <!--<plugin>
                 <groupId>org.jboss.as.plugins</groupId>
                 <artifactId>jboss-as-maven-plugin</artifactId>
                 <version>7.7.Final</version>
@@ -60,7 +60,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
 
     </build>
